2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Handle filenames containing spaces.
	Reported by: Jordan Uggla.
	Tested by: Jordan Uggla.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig.in (grub_script_check): New variable.
	Use grub_script_check instead of grub-script-check.
	Reported by: Barry Jackson.

2010-11-13  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (menu): Correct the order.
	Reported by: D. Hugh Redelmeier.

2010-11-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (multiboot_trampoline): Add missing
	jump.

2010-11-08  Manoel Rebelo Abranches <mrabran@br.ibm.com>

	* include/grub/elfload.h (grub_elf32_size): New parameter.
	All users updated.
	Return maximum segments alignment.
	(grub_elf64_size): Likewise.
	* kern/elf.c (grub_elf32_size): New parameter. All users updated.
	Return maximum segments alignment.
	(grub_elf64_size): Likewise.
	* grub-core/loader/powerpc/ieee1275/linux.c:
	(grub_linux_claimmap_iterate): New function. Uses the
	"available" property in the "memory" node for memory allocation
	for kernel in the PowerPC loader.
	(grub_linux_load32): Correctly find linux entry point offset.
	(grub_linux_load64): Likewise.

2010-11-07  Robert Millan  <rmh@gnu.org>

	On mips-yeeloong, build with -march=loongson2f when this flag is
	available (GCC >= 4.4).
	* conf/Makefile.common [COND_mips_yeeloong] (CFLAGS_PLATFORM): Remove
	`-march=mips3'.
	* configure.ac: For mips-yeeloong, add -march=loongson2f if available,
	or otherwise add -march=mips3.

2010-11-07  BVK Chaitanya  <bvk.groups@gmail.com>

	Suppress shell expansion on echo '*' and echo "*" like cases.
	Reported by: Jordan Uggla.

	* grub-core/script/execute.c (grub_script_arglist_to_argv): Escape
	string arguments before shell expansion.
	* tests/grub_cmd_echo.in: New testcases.

2010-11-07  Robert Millan  <rmh@gnu.org>

	* conf/mips-qemu-mips.rmk: Remove stale file from previous